<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/mytoolbarnew"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <Button
        android:id="@+id/button_create"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/creer"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Localisation_new" />


    <TextView
        android:id="@+id/Nameee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/nomréu"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/mytoolbarnew"
        app:layout_constraintTop_toBottomOf="@+id/mytoolbarnew" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Name_Meeting_New"
        android:layout_width="128dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:hint="@string/reu"
        android:inputType="textShortMessage|textPersonName|text|textEmailAddress"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Nameee"
        app:layout_constraintTop_toBottomOf="@+id/Nameee" />

    <TextView
        android:id="@+id/Date_Meetinggg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/datereu"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Name_Meeting_New"
        app:layout_constraintTop_toBottomOf="@+id/Name_Meeting_New" />

    <TextView
        android:id="@+id/Hourrrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/heurereu"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Date_Meeting_new"
        app:layout_constraintTop_toBottomOf="@+id/Date_Meeting_new" />

    <TextView
        android:id="@+id/Date_Meeting_new"
        android:layout_width="171dp"
        android:layout_height="27dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/datereu"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Date_Meetinggg"
        app:layout_constraintTop_toBottomOf="@+id/Date_Meetinggg" />


    <TextView
        android:id="@+id/Hour_Meeting_new"
        android:layout_width="149dp"
        android:layout_height="23dp"
        android:layout_marginTop="6dp"
        android:hint="@string/heure222"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Hourrrr"
        app:layout_constraintTop_toBottomOf="@+id/Hourrrr" />

    <TextView
        android:id="@+id/Participantt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/participant"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Hourrrr"
        app:layout_constraintTop_toBottomOf="@+id/Hour_Meeting_new" />

    <EditText
        android:id="@+id/Mail_Meetin_new"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/consigne"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Participantt"
        app:layout_constraintTop_toBottomOf="@+id/Participantt" />

    <TextView
        android:id="@+id/Sujet_Meetinggg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sujet"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Mail_Meetin_new"
        app:layout_constraintTop_toBottomOf="@+id/Mail_Meetin_new" />

    <EditText
        android:id="@+id/Sujet_Meeting_new"
        android:layout_width="298dp"
        android:layout_height="54dp"
        android:autoText="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Sujet_Meetinggg"
        app:layout_constraintTop_toBottomOf="@+id/Sujet_Meetinggg" />

    <Spinner
        android:id="@+id/Localisation_new"
        android:layout_width="257dp"
        android:layout_height="18dp"
        android:layout_marginTop="6dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/Localisation_newww"
        app:layout_constraintTop_toBottomOf="@+id/Localisation_newww" />

    <TextView
        android:id="@+id/Localisation_newww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/salle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Sujet_Meeting_new"
        app:layout_constraintTop_toBottomOf="@+id/Sujet_Meeting_new" />

</androidx.constraintlayout.widget.ConstraintLayout>